--- a/src/PiPlayer/PiPlayer.csproj
+++ b/src/PiPlayer/PiPlayer.csproj
@@ -10,16 +10,18 @@
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="CliWrap" Version="3.6.4" />
-		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.7" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
+		
+		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.8" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
 		<PackageReference Include="OnceMi.AspNetCore.IdGenerator" Version="1.0.6" />
 		<PackageReference Include="IdleBus" Version="1.5.3" />
-		<PackageReference Include="FreeSql" Version="3.2.808" />
-		<PackageReference Include="FreeSql.Repository" Version="3.2.808" />
-		<PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.808" />
-		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
+		<PackageReference Include="FreeSql" Version="3.2.810" />
+		<PackageReference Include="FreeSql.Repository" Version="3.2.810" />
+		<PackageReference Include="FreeSql.Provider.SqliteCore" Version="3.2.810" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
+		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.7" />
 	</ItemGroup>
 
 	<ItemGroup>
