--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -5,7 +5,7 @@
     "Name": "default",
     "DbType": "Sqlite",
     "AutoSyncStructure": true,
-    "ConnectionString": "Data Source=%BASE%/data/db/main.sqlite; Pooling=true;Min Pool Size=1",
+    "ConnectionString": "Data Source=%BASE%/data/db/main.sqlite",
     "Slaves": []
   },
   "AppSettings": {
