fix: 默认显示屏幕处理

--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -14,7 +14,7 @@
     //视频播放显示配置，如果FullScreen为true，Width和Height无效，否者使用Width和Height指定窗口大小播放
     "Screen": {
       "Index": 0, //默认使用的屏幕序号
-      "FullScreen": true,
+      "FullScreen": false,
       "Width": 600,
       "Height": 600
     },
