--- a/src/PiPlayer/PiPlayer.csproj
+++ b/src/PiPlayer/PiPlayer.csproj
@@ -9,7 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-		<PackageReference Include="CliWrap" Version="3.6.4" />
+		<PackageReference Include="CliWrap" Version="3.6.6" />
 		
 		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.1" />
@@ -20,12 +20,20 @@
 		<PackageReference Include="FreeSql" Version="3.2.810" />
 		<PackageReference Include="FreeSql.Repository" Version="3.2.810" />
 		<PackageReference Include="FreeSql.Provider.SqliteCore" Version="3.2.810" />
+		<PackageReference Include="SixLabors.Fonts" Version="2.0.1" />
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
+		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.0" />
 		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.7" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\PiPlayer.AspNetCore.FFMpeg\PiPlayer.AspNetCore.FFMpeg.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Fonts\SourceHanSerifCN-Medium-6.otf">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
