--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -25,6 +25,8 @@
     "APPasswd": "12345678",
     //队列中包含图片的时候，每张图片播放间隔时间
     "ImagePlaybackInterval": 30,
+    //是否显示默认屏幕
+    "ShowDefaultScreen": false,
     "AllowExtensions": [
       {
         "Type": "Image",
