--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -26,7 +26,7 @@
     //队列中包含图片的时候，每张图片播放间隔时间
     "ImagePlaybackInterval": 30,
     //是否显示默认屏幕
-    "ShowDefaultScreen": false,
+    "ShowDefaultScreen": true,
     "AllowExtensions": [
       {
         "Type": "Image",
