--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -27,6 +27,8 @@
     "ImagePlaybackInterval": 30,
     //是否显示默认屏幕
     "ShowDefaultScreen": true,
+    //默认屏幕显示内容（Normal：常规，Hologram：全息）
+    "DefaultScreenContent": "Hologram",
     "AllowExtensions": [
       {
         "Type": "Image",
