--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -1,16 +1,10 @@
 {
   "AllowedHosts": "*",
-  //数据库配置，一般情况勿动
-  "DbConnectionStrings": {
-    "Name": "default",
-    "DbType": "Sqlite",
-    "AutoSyncStructure": true,
-    "ConnectionString": "Data Source=%BASE%/data/db/main.sqlite",
-    "Slaves": []
-  },
   "AppSettings": {
     //存放数据文件夹，%BASE%为通配符，表示应用程序根目录
     "DataDirectory": "%BASE%/data",
+    //数据库配置，一般情况勿动
+    "DbConnectionString": "Data Source=%BASE%/data/db/main.sqlite",
     //视频播放显示配置，如果FullScreen为true，Width和Height无效，否者使用Width和Height指定窗口大小播放
     "Screen": {
       "Index": 0, //默认使用的屏幕序号
@@ -18,17 +12,20 @@
       "Width": 600,
       "Height": 600
     },
-    //是否启用AP，在首屏显示
-    "IsEnableAP": true,
-    //AP信息
-    "APName": "PiPlayer",
-    "APPasswd": "12345678",
+    "DefaultScreen": {
+      //是否显示默认屏幕
+      "IsEnable": true,
+      //默认屏幕显示内容（Normal：常规，Hologram：全息）
+      "Type": "Hologram"
+    },
+    "AP": {
+      //是否启用AP，在首屏显示
+      "IsEnable": true,
+      "Name": "PiPlayer",
+      "Password": "12345678"
+    },
     //队列中包含图片的时候，每张图片播放间隔时间
-    "ImagePlaybackInterval": 30,
-    //是否显示默认屏幕
-    "ShowDefaultScreen": true,
-    //默认屏幕显示内容（Normal：常规，Hologram：全息）
-    "DefaultScreenContent": "Hologram",
+    "ImagePlaybackInterval": 60,
     "AllowExtensions": [
       {
         "Type": "Image",
