--- a/src/PiPlayer/nlog.config
+++ b/src/PiPlayer/nlog.config
@@ -28,18 +28,9 @@
 					archiveAboveSize="104857600"
 					layout="${date}|${uppercase:${level}}|${logger}|${message}${onexception:inner=${newline} *****Error***** ${newline} ${exception:format=toString}${exception:format=StackTrace}}" />
 		</target>
-		
-		<target xsi:type="AsyncWrapper" name="http-log">
-			<target xsi:type="File"
-					keepFileOpen="true"
-					openFileCacheTimeout="60"
-					name="http-file-log"
-					fileName="${logDirectory}/${shortdate}_http_1.log"
-					archiveFileName="${logDirectory}/${shortdate}_http_{#}.log"
-					archiveNumbering="Sequence"
-					archiveAboveSize="104857600"
-					layout="${date}|${uppercase:${level}}|${logger}|${message}${onexception:inner=${newline} *****Error***** ${newline} ${exception:format=toString}${exception:format=StackTrace}}" />
-		</target>
+
+		<!-- Add this target to create a null target -->
+		<target xsi:type="Null" name="null" />
 		
 		<target xsi:type="ColoredConsole" name="all-console"
 				layout="${date}|${uppercase:${level}}|${logger}|${message}${onexception:inner=${newline} *****Error***** ${newline} ${exception:format=toString}${exception:format=StackTrace}}">
@@ -53,7 +44,7 @@
 
 	<!-- rules to map from logger name to target -->
 	<rules>
-		<logger name="Microsoft.AspNetCore.*" minlevel="Info" writeTo="http-log" final="true" />
+		<logger name="Microsoft.AspNetCore.*" minlevel="Trace" writeTo="null" final="true" />
 		<!--All logs, but skip Microsoft.AspNetCore.HttpLogging.* -->
 		<logger name="*" minlevel="Info" writeTo="all-log" />
 		<!--All logs, but skip Microsoft.AspNetCore.HttpLogging.* -->
