--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -8,7 +8,7 @@
     //视频播放显示配置，如果FullScreen为true，Width和Height无效，否者使用Width和Height指定窗口大小播放
     "Screen": {
       "Index": 0, //默认使用的屏幕序号
-      "FullScreen": false,
+      "FullScreen": true,
       "Width": 600,
       "Height": 600
     },
@@ -16,7 +16,7 @@
       //是否显示默认屏幕
       "IsEnable": true,
       //默认屏幕显示内容（Normal：常规，Hologram：全息）
-      "Type": "Hologram"
+      "Type": "Normal"
     },
     "AP": {
       //是否启用AP，在首屏显示
