--- a/src/PiPlayer.AspNetCore.FFMpeg/PiPlayer.AspNetCore.FFMpeg.csproj
+++ b/src/PiPlayer.AspNetCore.FFMpeg/PiPlayer.AspNetCore.FFMpeg.csproj
@@ -7,8 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0-preview.3.24172.9" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-preview.3.24172.9" />
 		<PackageReference Include="FFMpegCore" Version="5.1.0" />
 		<PackageReference Include="CliWrap" Version="3.6.6" />
 	</ItemGroup>
