--- a/src/PiPlayer.AspNetCore.FFMpeg/PiPlayer.AspNetCore.FFMpeg.csproj
+++ b/src/PiPlayer.AspNetCore.FFMpeg/PiPlayer.AspNetCore.FFMpeg.csproj
@@ -7,24 +7,24 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0-preview.3.24172.9" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-preview.3.24172.9" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
 		<PackageReference Include="FFMpegCore" Version="5.1.0" />
 		<PackageReference Include="CliWrap" Version="3.6.6" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ContentWithTargetPath Include="runtimes\win-x64\ffmpeg.exe" Condition="'$(RuntimeIdentifier)' != 'linux-x64' AND '$(RuntimeIdentifier)' != 'osx-x64'">
+		<ContentWithTargetPath Include="runtimes\win-x64\bin\ffmpeg.exe" Condition="'$(RuntimeIdentifier)' != 'linux-x64' AND '$(RuntimeIdentifier)' != 'osx-x64'">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<TargetPath>runtimes\win-x64\ffmpeg.exe</TargetPath>
+			<TargetPath>runtimes\win-x64\bin\ffmpeg.exe</TargetPath>
 		</ContentWithTargetPath>
-		<ContentWithTargetPath Include="runtimes\win-x64\ffprobe.exe" Condition="'$(RuntimeIdentifier)' != 'linux-x64' AND '$(RuntimeIdentifier)' != 'osx-x64'">
+		<ContentWithTargetPath Include="runtimes\win-x64\bin\ffprobe.exe" Condition="'$(RuntimeIdentifier)' != 'linux-x64' AND '$(RuntimeIdentifier)' != 'osx-x64'">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<TargetPath>runtimes\win-x64\ffprobe.exe</TargetPath>
+			<TargetPath>runtimes\win-x64\bin\ffprobe.exe</TargetPath>
 		</ContentWithTargetPath>
-		<ContentWithTargetPath Include="runtimes\win-x64\mpv.exe" Condition="'$(RuntimeIdentifier)' != 'linux-x64' AND '$(RuntimeIdentifier)' != 'osx-x64'">
+		<ContentWithTargetPath Include="runtimes\win-x64\bin\mpv.exe" Condition="'$(RuntimeIdentifier)' != 'linux-x64' AND '$(RuntimeIdentifier)' != 'osx-x64'">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<TargetPath>runtimes\win-x64\mpv.exe</TargetPath>
+			<TargetPath>runtimes\win-x64\bin\mpv.exe</TargetPath>
 		</ContentWithTargetPath>
 	</ItemGroup>
 
