fix: 默认显示页面优化

--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -16,14 +16,14 @@
       //是否显示默认屏幕
       "IsEnable": true,
       //默认屏幕显示内容（Normal：常规，Hologram：全息）
-      "Type": "Normal"
+      "Type": "Normal",
+      //默认会展示出来可以访问地址中的地址
+      "DefaultShowHosts": [],
+      //只有匹配以下前缀的地址会显示
+      "HostPrefixMatch": []
     },
-    "AP": {
-      //是否启用AP，在首屏显示
-      "IsEnable": true,
-      "Name": "PiPlayer",
-      "Password": "12345678"
-    },
+    //启动之前检查网络连接状态
+    "NetworkCheck": true,
     //队列中包含图片的时候，每张图片播放间隔时间
     "ImagePlaybackInterval": 60,
     "AllowExtensions": [
