--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -17,9 +17,9 @@
       "IsEnable": true,
       //默认屏幕显示内容（Normal：常规，Hologram：全息）
       "Type": "Normal",
-      //默认会展示出来可以访问地址中的地址
+      //默认会展示出来可以访问地址中的地址，如："https://192.168.188.188:8080"
       "DefaultShowHosts": [],
-      //只有匹配以下前缀的地址会显示
+      //只有匹配以下前缀的地址会显示，如："192.168."
       "HostPrefixMatch": []
     },
     //启动之前检查网络连接状态
