--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -14,7 +14,7 @@
     },
     "DefaultScreen": {
       //是否显示默认屏幕
-      "IsEnable": true,
+      "IsEnable": false,
       //默认屏幕显示内容（Normal：常规，Hologram：全息）
       "Type": "Normal",
       //默认会展示出来可以访问地址中的地址，如："https://192.168.188.188:8080"
