fix: 提供巴法云支持（小爱同学播放控制）

--- a/src/PiPlayer/appsettings.json
+++ b/src/PiPlayer/appsettings.json
@@ -5,6 +5,14 @@
     "DataDirectory": "%BASE%/data",
     //数据库配置，一般情况勿动
     "DbConnectionString": "Data Source=%BASE%/data/db/main.sqlite",
+    //巴发云物联网平台，配置后可以通过物联网平台切换播放画面（仅提供随机切换播放内容的功能，不支持选择内容进行播放、不支持开启和停止播放）
+    //主要用于可以喊小爱同学“换个内容”，然后切换到下一个内容
+    //使用教程（Tcp模式）：https://github.com/withsalt/BemfaCloud
+    "BemfaIot": {
+      "IsEnabled": true,
+      "DeviceId": "piPlayerSwitch006",
+      "PrivateKey": "4c****************************c0"
+    },
     //视频播放显示配置，如果FullScreen为true，Width和Height无效，否者使用Width和Height指定窗口大小播放
     "Screen": {
       "Index": 0, //默认使用的屏幕序号
