--- a/src/PiPlayer/PiPlayer.csproj
+++ b/src/PiPlayer/PiPlayer.csproj
@@ -7,21 +7,23 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper" Version="13.0.1" />
-		<PackageReference Include="CliWrap" Version="3.6.7" />
-		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.15" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+		<PackageReference Include="AutoMapper" Version="14.0.0" />
+		<PackageReference Include="BemfaCloud" Version="1.0.2" />
+		<PackageReference Include="BemfaCloud.Devices" Version="1.0.2" />
+		<PackageReference Include="CliWrap" Version="3.8.2" />
+		<PackageReference Include="NLog.Web.AspNetCore" Version="5.4.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Session" Version="2.3.0" />
 		<PackageReference Include="OnceMi.AspNetCore.IdGenerator" Version="1.0.6" />
 		<PackageReference Include="IdleBus" Version="1.5.3" />
-		<PackageReference Include="FreeSql" Version="3.2.833" />
-		<PackageReference Include="FreeSql.Repository" Version="3.2.833" />
-		<PackageReference Include="FreeSql.Provider.SqliteCore" Version="3.2.833" />
-		<PackageReference Include="SixLabors.Fonts" Version="2.0.6" />
-		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
-		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.4" />
-		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.10" />
+		<PackageReference Include="FreeSql" Version="3.5.108" />
+		<PackageReference Include="FreeSql.Repository" Version="3.5.108" />
+		<PackageReference Include="FreeSql.Provider.SqliteCore" Version="3.5.108" />
+		<PackageReference Include="SixLabors.Fonts" Version="2.1.2" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
+		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.5" />
+		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.11" />
 	</ItemGroup>
 
 	<ItemGroup>
